[package]
name = "rust_benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "real_blackbox"] }

[dependencies]
rand = "0.8.5"
rustc-hash = "1.1.0"

[profile.bench]
debug = true

[[bench]]
name = "small_map_bench"
harness = false

